clusters/desire/promlens/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: promlens
  namespace: promlens
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: promlens
